번호 추천 방식 ENUM 추가 / 서비스 수정